--- a/gruene/lang/index.html
+++ b/gruene/lang/index.html
@@ -46,57 +46,66 @@
           <p><strong>Partei:</strong> Bündnis 90/Die Grünen</p>
           <p>
             <strong>Aktuelles Amt:</strong> Mitglied des Deutschen Bundestages
-            (MdB, seit 2021), frauenpolitische Sprecherin der Grünen, ehemalige
-            Bundesvorsitzende der Grünen (2022 – 2024)
+            (wieder über Liste eingezogen), ehemalige Bundesvorsitzende
+            (zurückgetreten 2024)
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
-            <strong>Studium:</strong> Ricarda Lang begann 2012 ein Studium der
-            Rechtswissenschaften an der Ruprecht-Karls-Universität Heidelberg
-            und später an der Humboldt-Universität zu Berlin. Sie brach das
-            Studium 2019 ohne Abschluss ab.
+            <strong>Studium:</strong> Der Klassiker: Studium der
+            Rechtswissenschaften in Heidelberg und Berlin, 2019 nach 7 Jahren
+            ohne Abschluss abgebrochen.
           </p>
 
           <p>
-            <strong>Berufsausbildung und Berufserfahrung:</strong> Lang verfügt
-            über keine nennenswerte berufliche Ausbildung außerhalb der Politik.
-          </p>
-
-          <p>
-            <strong>Persönliches Leben:</strong> Lang ist seit 2017 mit dem
-            Mathematiker Florian Wilsch liiert und verlobte sich 2023. Sie ist
-            das erste offen bisexuelle Mitglied des Deutschen Bundestages.
+            <strong>Berufserfahrung:</strong> Keine. Ricarda Lang ist der
+            Inbegriff der "Kreißsaal-Hörsaal-Plenarsaal"-Karriere. Sie hat nie
+            im freien Arbeitsmarkt gearbeitet, entscheidet aber gerne darüber,
+            wie dieser reguliert werden soll.
           </p>
 
           <h3>Politische Laufbahn</h3>
-          <p><strong>Seit 2021:</strong> Mitglied des Deutschen Bundestages</p>
+          <p><strong>Seit 2021:</strong> Mitglied des Deutschen Bundestages.</p>
           <p>
-            <strong>2014 – 2021:</strong> Verschiedene Positionen innerhalb der
-            Grünen, unter anderem als Sprecherin der Grünen Jugend und als
-            stellvertretende Bundesvorsitzende.
+            <strong>2022 – 11/2024:</strong> Bundesvorsitzende der Grünen
+            (Rücktritt nach Wahlschlappen).
           </p>
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Umweltpolitik, soziale Gerechtigkeit,
-            Feminismus und Body Positivity
+            <strong>Schwerpunkte:</strong> Body Positivity, feministische
+            Gesellschaftspolitik und Ernährungstipps für die Bevölkerung.
           </p>
+
           <h3>FACTS</h3>
           <p>
-            Lang fiel immer wieder durch fragwürdige Aussagen auf,
-            wie zum Beispiel ihre Versuche, die Essgewohnheiten der Deutschen zu
-            revolutionieren, oder ihre Forderung nach einer Überprüfung der
-            bereits abgeschlossenen Nordstream-Pipeline – ein Schritt, der eher
-            den Eindruck erweckte, sie sei nicht ganz im Bilde.
+            <strong>Realitätsferne:</strong> Legendär ist ihr Auftritt bei
+            Markus Lanz, wo sie die durchschnittliche Rente in Deutschland auf
+            „2000 Euro“ schätzte. Ein Schlag ins Gesicht für Millionen Rentner,
+            der zeigte, wie weit entfernt sie von der Lebensrealität normaler
+            Bürger ist.
           </p>
+
           <p>
-            Ihre Schätzung
-            der Durchschnittsrente von 2000 Euro war ebenfalls weit von der
-            Realität entfernt.
+            <strong>Der Rücktritt vom Rücktritt:</strong>
+            Im November 2024 trat sie als Parteivorsitzende zurück, um
+            „Verantwortung“ für die katastrophalen Wahlergebnisse zu übernehmen.
+            Diese Verantwortung ging jedoch nicht so weit, auf ihr gut dotiertes
+            Bundestagsmandat zu verzichten.
           </p>
-          <p>Im April 2022 stimmte sie zudem für die
-            allgemeine Corona-Impfpflicht.
+
+          <p>
+            <strong>Wahl 2025:</strong> Auch 2025 wollten die Wähler in ihrem
+            Wahlkreis (Backnang) sie nicht direkt haben. Sie verpasste das
+            Direktmandat erneut, wurde aber – wie üblich – über die sichere
+            Landesliste ihrer Partei in den Bundestag gerettet.
+          </p>
+
+          <p>
+            <strong>Impfpflicht:</strong>
+            Im April 2022 stimmte Ricarda Lang im Bundestag
+            <strong>für die allgemeine Corona-Impfpflicht</strong> und damit für
+            staatlichen Zwang bei medizinischen Eingriffen.
           </p>
         </div>
         <img
