--- a/spd/esken/index.html
+++ b/spd/esken/index.html
@@ -48,57 +48,99 @@
             (SPD)
           </p>
           <p>
-            <strong>Aktuelles Amt:</strong> Co-Parteivorsitzende der SPD (seit
-            2019)
+            <strong>Aktuelles Amt:</strong> Vorsitzende des Familienausschusses
+            (seit Mai 2025), einfaches MdB. Ehemalige SPD-Bundesvorsitzende
+            (2019–2025).
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
-            <strong>Studium:</strong> Esken begann ein Studium in Politik und
-            Germanistik, brach dieses jedoch nach vier Semestern ab. Später
-            absolvierte sie eine Ausbildung zur staatlich geprüften
-            Informatikerin.
+            <strong>Studium:</strong> Studium der Politik und Germanistik
+            abgebrochen. Später Ausbildung zur Informatikerin.
           </p>
           <p>
-            <strong>Berufserfahrung:</strong> Vor ihrer politischen Karriere
-            sammelte Esken Erfahrungen in verschiedenen Bereichen: Sie war
-            Straßenmusikerin, Kellnerin, Paketzustellerin und Chauffeurin. Nach
-            ihrer Ausbildung zur Informatikerin arbeitete sie als
-            Softwareentwicklerin. Aufgrund der begrenzten Betreuungsangebote
-            nach der Geburt ihrer Kinder gab sie ihre Berufstätigkeit auf und
-            engagierte sich zunehmend politisch.
+            <strong>Berufserfahrung:</strong> Ein bunter Lebenslauf
+            (Paketzustellerin, Kellnerin, Straßenmusikerin,
+            Softwareentwicklerin), der oft als Beweis für "Bodenständigkeit"
+            dient. Kritiker sehen darin eher den Beweis, dass man in der SPD
+            auch ohne geradlinige Kompetenzkarriere bis an die Spitze stolpern
+            kann.
           </p>
 
           <h3>Politische Laufbahn</h3>
           <p>
-            <strong>Seit 2019:</strong> Co-Parteivorsitzende der SPD (zusammen
-            mit Norbert Walter-Borjans)
+            <strong>Seit 05/2025:</strong> Vorsitzende des Ausschusses für
+            Bildung und Familie (politisches Abstellgleis).
           </p>
           <p>
-            <strong>2013 – heute:</strong> Mitglied des Deutschen Bundestages
+            <strong>2019 – 05/2025:</strong> Parteivorsitzende der SPD
+            (Rücktritt nach Wahldebakel).
           </p>
-          <p>
-            <strong>2011 – 2013:</strong> Mitglied des Landesvorstands der SPD
-            Baden-Württemberg
-          </p>
-          <p><strong>Seit 2011:</strong> Mitglied des SPD-Bundesvorstands</p>
+          <p><strong>Seit 2013:</strong> Mitglied des Deutschen Bundestages.</p>
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Digitalisierung, soziale
-            Gerechtigkeit, Klimaschutz und Bildung
+            <strong>Schwerpunkte:</strong> Kampf gegen die Polizei (unter dem
+            Deckmantel der Rassismuskritik), Verharmlosung linker Gewalt
+            ("Antifa") und digitale Überwachung durchwinken, während man
+            öffentlich dagegen wettert.
           </p>
 
           <h3>FACTS</h3>
           <p>
-            Esken wurde wiederholt negativ auffällig, etwa durch ihre
-            Bezeichnung von Corona-Protestierenden als „Covidioten“ und ihre
-            Herabsetzung der Digitalisierung als „Scheinproblem“. Ihre
-            pauschalen Aussagen zur AfD als „Nazi-Partei“ und ihre wiederholten
-            Fehltritte in der Migrationspolitik sorgten für hitzige
-            Diskussionen.
+            <strong>Der Solingen-Eklat (2024):</strong>
+            Nach dem tödlichen islamistischen Messeranschlag in Solingen glänzte
+            Esken mit der zynischen Analyse, man könne aus der Tat
+            <strong>„nichts lernen“</strong>. Ein Satz, der an Empathielosigkeit
+            und politischer Bankrotterklärung kaum zu überbieten war und selbst
+            in der eigenen Partei Forderungen nach einem Talkshow-Verbot für die
+            Vorsitzende auslöste.
           </p>
-          <p>Zudem stimmte er 2022 für die allgemeine Corona-Impfpflicht.</p>
+
+          <p>
+            <strong>Verhältnis zur Polizei & Antifa:</strong>
+            Esken pflegte ein fast schon feindseliges Verhältnis zur Exekutive.
+            Sie unterstellte der deutschen Polizei pauschal
+            <strong>„latenten Rassismus“</strong> (sehr zur Freude der Beamten),
+            kritisierte Polizeieinsätze gegen Linksextreme in Leipzig-Connewitz
+            und twitterte stolz <strong>„Ich bin Antifa“</strong>. Dass sie
+            damit den gewaltbereiten schwarzen Block verharmloste, war ihr egal
+            – Kritik daran tat sie als rechts ab.
+          </p>
+
+          <p>
+            <strong>Islamismus-Verharmlosung:</strong>
+            Experten wie Ahmad Mansour rauften sich die Haare, als Esken
+            behauptete, Islamismus drücke „per se keine gruppenbezogene
+            Menschenfeindlichkeit aus“. Ein fataler Weichzeichner für
+            extremistische Ideologien, der zeigte, wie blind die SPD-Spitze auf
+            dem linken Auge war.
+          </p>
+
+          <p>
+            <strong>Meisterin der Doppelmoral:</strong>
+            Öffentlich inszenierte sie sich als Gegnerin von Staatstrojanern und
+            Überwachung. Als ihre Fraktion im Bundestag genau diesen
+            Instrumenten zustimmte, unternahm sie als Parteichefin: Nichts.
+            Juso-Vertreter nannten das Verhalten „schäbig“, Esken nannte es wohl
+            Realpolitik.
+          </p>
+
+          <p>
+            <strong>Das Ende (2025):</strong>
+            Nachdem sie die SPD auf historische 16,4 % heruntergewirtschaftet
+            hatte, zog sie sich im Mai 2025 vom Vorsitz zurück. In ihrem
+            Wahlkreis Calw landete sie mit blamablen
+            <strong>12,89 %</strong> sogar hinter der AfD auf Platz 3. Ihr
+            Mandat behielt sie nur dank Listenplatz 1.
+          </p>
+
+          <p>
+            <strong>Impfpflicht:</strong>
+            2022 stimmte siefür die allgemeine Corona-Impfpflicht und
+            befürwortete damit staatlichen Zwang bei medizinischen
+            Entscheidungen.
+          </p>
         </div>
 
         <img
