--- a/spd/faeser/index.html
+++ b/spd/faeser/index.html
@@ -49,64 +49,54 @@
             (SPD)
           </p>
           <p>
-            <strong>Aktuelles Amt:</strong> Bundesministerin des Innern und für
-            Heimat (seit Dezember 2021)
+            <strong>Aktuelles Amt:</strong> Einfaches Mitglied des Deutschen Bundestages (seit 2025). Ehemalige Bundesministerin des Innern (2021–2025).
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
-            <strong>Studium:</strong> Nancy Faeser studierte Rechtswissenschaft
-            an der Johann Wolfgang Goethe-Universität Frankfurt am Main und
-            legte 2000 das zweite juristische Staatsexamen ab.
-          </p>
-          <p>
-            <strong>Berufserfahrung:</strong> Nach dem Studium arbeitete sie als
-            Rechtsanwältin mit Schwerpunkt Arbeitsrecht.
+            <strong>Studium:</strong> Juristin. Als Rechtsanwältin sollte man eigentlich wissen, dass die Unschuldsvermutung gilt, bis das Gegenteil bewiesen ist. In ihrer Zeit als Ministerin schien sie dieses Prinzip – zumindest im Fall Schönbohm – kurzzeitig vergessen zu haben.
           </p>
 
           <h3>Politische Laufbahn</h3>
           <p>
-            <strong>Seit 2021:</strong> Bundesministerin des Innern und für
-            Heimat
+            <strong>Seit 2025:</strong> Mitglied des Bundestages (über Landesliste gerettet).
           </p>
           <p>
-            <strong>2019 – 2021:</strong> Fraktionsvorsitzende der SPD im
-            hessischen Landtag
+            <strong>2021 – 05/2025:</strong> Bundesministerin des Innern und für Heimat (Kabinett Scholz).
           </p>
-          <p><strong>2003 – 2021:</strong> Mitglied des hessischen Landtags</p>
           <p>
-            <strong>2009 – 2019:</strong> Innenpolitische Sprecherin der
-            SPD-Fraktion Hessen
+            <strong>2023:</strong> Gescheiterte Spitzenkandidatin bei der Landtagswahl in Hessen.
           </p>
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Vielfalt, Offenheit, Kampf gegen
-            Rechtsextremismus
+            <strong>Schwerpunkte:</strong> "Kampf gegen Rechts" (als einziges Thema), Symbolpolitik (Armbinden) und das Feuern von Beamten aufgrund von TV-Satire-Sendungen.
           </p>
 
           <h3>FACTS</h3>
           <p>
-            Faeser fiel wiederholt durch fragwürdige Entscheidungen und
-            Äußerungen auf: Ihre Besetzung des BfV-Chefpostens sorgte für
-            heftige Kritik, ihr Umgang mit Clan-Kriminalität wurde als zu lasch
-            bewertet, und ihre Position zur Migrationspolitik löste Debatten
-            über innere Sicherheit aus.
+            <strong>Der Abstieg:</strong>
+            Nancy Faesers Zeit als Innenministerin endete im Mai 2025. Bei der Bundestagswahl kassierte sie die Quittung der Wähler: In ihrem Wahlkreis Main-Taunus verlor sie das Direktmandat gegen die CDU. Dass sie heute überhaupt noch im Bundestag sitzt, verdankt sie nur dem sicheren Listenplatz 4 der hessischen SPD.
           </p>
 
           <p>
-            Während der Flutkatastrophe 2023 konzentrierte sie sich vorrangig
-            auf ihren NRW-Wahlkampf – mit überschaubarem Erfolg. Dafür setzt sie
-            sich mit voller Überzeugung im Kampf gegen Rechts ein, demonstriert
-            regelmäßig die richtige Haltung für Vielfalt und Offenheit und
-            verschafft Deutschland weltweit Aufmerksamkeit – sei es mit einer
-            Regenbogenbinde in Katar oder durch ihre Teilnahme an Demos mit
-            Polizei-Gegnern.
+            <strong>Die "Böhmermann-Affäre" (Schönbohm):</strong>
+            Ein Tiefpunkt rechtsstaatlichen Handelns: Faeser feuerte BSI-Präsident Arne Schönbohm, nachdem der Satiriker Jan Böhmermann im ZDF unbewiesene Vorwürfe über Russland-Kontakte verbreitet hatte. Später stellte sich heraus: Die Vorwürfe waren haltlos. Eine Entschuldigung? Fehlanzeige. Stattdessen machte sie das BSI abhängiger von der Politik.
           </p>
 
           <p>
-            Migration und innere Sicherheit scheinen hingegen nicht ganz oben
-            auf ihrer Prioritätenliste zu stehen.
+            <strong>Das unprüfbare Abschiedsgeschenk:</strong>
+            Kurz vor ihrem Amtsende im Mai 2025 drückte sie noch schnell die Einstufung der AfD als „gesichert rechtsextrem“ durch. Der Clou: Auf ihre Anweisung hin wurde das entsprechende Gutachten nicht mehr fachlich geprüft, weil die Zeit nicht reichte. Hauptsache, das Ergebnis steht in der Zeitung – juristische Sorgfalt war zweitrangig. Selbst Wolfgang Kubicki nannte das Vorgehen fragwürdig.
+          </p>
+
+          <p>
+            <strong>Die "One Love"-Farce:</strong>
+            Während sie innenpolitisch echte Probleme (Migration, Clan-Kriminalität) oft ignorierte, zeigte sie in Katar vollen Einsatz für Symbolfotos. Mit der „One Love“-Binde auf der Tribüne rettete sie zwar nicht die Menschenrechte, sicherte sich aber einen Platz in der Geschichte der peinlichsten PR-Aktionen, für die sie sogar von Rudi Völler Kritik erntete.
+          </p>
+          
+          <p>
+             <strong>Opportunismus pur:</strong>
+             Jahrelang warnte sie davor, Migration zu problematisieren. Doch kurz vor ihrer Landtagswahl in Hessen (nach den Silvester-Krawallen 2022/23) entdeckte sie plötzlich Probleme mit „bestimmten jungen Männern“. Genützt hat der kurze Ausflug in die Realität nichts: Die Wahl in Hessen verlor sie krachend.
           </p>
         </div>
 
