--- a/spd/klingbeil/index.html
+++ b/spd/klingbeil/index.html
@@ -46,55 +46,61 @@
             (SPD)
           </p>
           <p>
-            <strong>Aktuelles Amt:</strong> Parteivorsitzender der SPD (seit
-            Dezember 2021)
+            <strong>Aktuelles Amt:</strong> Vizekanzler und Bundesminister der Finanzen (im Kabinett Merz seit Mai 2025), SPD-Bundesvorsitzender.
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
-            <strong>Studium:</strong> Lars Klingbeil studierte
-            Politikwissenschaft, Soziologie und Geschichte an der Gottfried
-            Wilhelm Leibniz Universität Hannover und schloss das Studium 2004
-            mit dem Magister Artium ab.
+            <strong>Studium:</strong> Politikwissenschaft, Soziologie und Geschichte (Magister). Also die perfekte theoretische Vorbereitung, um als Finanzminister die Wirtschaft einer der größten Industrienationen zu lenken.
           </p>
           <p>
-            <strong>Berufserfahrung:</strong> Klingbeil sammelte keine
-            klassische Berufserfahrung außerhalb der Politik.
+            <strong>Berufserfahrung:</strong> Null. Klingbeil ist der Prototyp des „Kreißsaal-Hörsaal-Plenarsaal“-Politikers. Er hat nie in der freien Wirtschaft Geld verdient, verwaltet nun aber als Finanzminister unser aller Steuergeld.
           </p>
 
           <h3>Politische Laufbahn</h3>
-          <p><strong>Seit 2021:</strong> Parteivorsitzender der SPD</p>
-          <p><strong>2017 – 2021:</strong> Generalsekretär der SPD</p>
           <p>
-            <strong>2009 – heute:</strong> Mitglied des Deutschen Bundestages
+            <strong>Seit 05/2025:</strong> Vizekanzler und Finanzminister (Karriere-Sprung trotz Wahlniederlage).
           </p>
           <p>
-            <strong>2003 – 2007:</strong> Stellvertretender Bundesvorsitzender
-            der Jusos
+            <strong>Seit 2021:</strong> SPD-Bundesvorsitzender (seit 2025 mit Bärbel Bas).
           </p>
           <p>
-            <strong>2005 – 2015:</strong> Mitglied der Parlamentarischen Linken
-            der SPD
+            <strong>02/2025 – 05/2025:</strong> Kurzzeitig Fraktionsvorsitzender (bis der Ministerposten winkte).
+          </p>
+          <p>
+            <strong>Seit 2005/2009:</strong> Berufspolitiker im Bundestag.
           </p>
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Sozialpolitik, Verteidigung und
-            Digitalisierung
+            <strong>Schwerpunkte:</strong> Machterhalt. Früher "Antifa" und "Parlamentarische Linke", heute braver Vizekanzler unter Friedrich Merz. Flexibilität ist sein Markenkern.
           </p>
 
           <h3>FACTS</h3>
           <p>
-            Klingbeil trug mit seinen wiederholten, polarisierenden Aussagen
-            über die AfD zur weiteren Eskalation des politischen Diskurses bei
-            und verhinderte konstruktive Dialoge. Als Vizevorsitzender der Jusos
-            prägte er von 2003 bis 2007 eine ideologisch verhärtete
-            Organisation, die für ihre teils dogmatischen Positionen bekannt
-            war. Zudem engagierte er sich in seiner Jugend in der
-            Antifa-Bewegung. Im April 2022 stimmte er für die allgemeine
-            Corona-Impfpflicht.
+            <strong>Der 64-Prozent-Mann:</strong>
+            Lars Klingbeil lieferte im Juni 2025 einen historischen Negativrekord ab. Bei seiner Wiederwahl zum Parteivorsitzenden erhielt er blamable <strong>64,9 %</strong> der Stimmen – das schlechteste Ergebnis aller Zeiten für einen Kandidaten ohne Gegenkandidaten. Selbst seine Co-Vorsitzende Bärbel Bas (95 %) ließ ihn alt aussehen. Die eigene Partei scheint ihn nicht zu lieben, nur zu ertragen.
           </p>
-          <p>Im April 2022 stimmte er für die allgemeine Corona-Impfpflicht.</p>
+
+          <p>
+            <strong>Belohnung für das Scheitern:</strong>
+            Unter seiner Führung stürzte die SPD bei der Bundestagswahl 2025 auf historische 16,4 % ab. Die Konsequenz? Kein Rücktritt, sondern eine Beförderung zum <strong>Vizekanzler und Finanzminister</strong>. Klingbeil bewies damit eindrucksvoll, dass in der Berliner Blase Leistung und Karriere nichts miteinander zu tun haben müssen.
+          </p>
+
+          <p>
+            <strong>Vergangenheit:</strong>
+            In seiner Jugend engagierte er sich in der <strong>Antifa-Bewegung</strong>. Vom kapitalismuskritischen Straßenkämpfer zum obersten Kassenwart des Staates – eine Wandlung, die wohl nur die SPD hinbekommt.
+          </p>
+          
+          <p>
+             <strong>Sexismus-Joker:</strong>
+             Unvergessen auch sein peinlicher Auftritt bei Maischberger Ende 2025, wo er Kritik an Bärbel Bas als Frauenfeindlichkeit abtat („Die Frau wird ausgelacht“), nur um ihr im selben Atemzug gönnerhaft zu attestieren: „Sie haut mal einen raus.“
+          </p>
+
+          <p>
+            <strong>Impfpflicht:</strong>
+            Im April 2022 stimmte Lars Klingbeil im Bundestag <strong>für die allgemeine Corona-Impfpflicht</strong> und damit für einen massiven Eingriff in die Grundrechte der Bürger.
+          </p>
         </div>
 
         <img
