--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -43,65 +43,60 @@
           <p><strong>Geburtsdatum & -ort:</strong> 14. Juni 1958, Osnabrück</p>
           <p><strong>Partei:</strong> SPD</p>
           <p>
-            <strong>Aktuelles Amt:</strong> Bundeskanzler der Bundesrepublik
-            Deutschland (seit 2021)
+            <strong>Aktuelles Amt:</strong> Einfaches Mitglied des Deutschen Bundestages (seit 2025 in der "Schmollecke"). Ehemaliger Bundeskanzler (2021–2025).
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
-            <strong>Studium:</strong> Scholz studierte Rechtswissenschaften an
-            der Universität Hamburg und schloss das Studium mit dem Ersten
-            Staatsexamen ab.
+            <strong>Studium:</strong> Jurist. Seine juristische Ausbildung scheint ihm vor allem dabei zu helfen, sich in Untersuchungsausschüssen an nichts erinnern zu müssen („Erinnerungslücken“ als Verteidigungsstrategie).
           </p>
           <p>
-            <strong>Berufserfahrung:</strong> Nach dem Studium arbeitete Scholz
-            als Rechtsanwalt und war in einer Rechtsanwaltskanzlei tätig.
+            <strong>Berufserfahrung:</strong> Früher Rechtsanwalt, heute Buchautor und Gelegenheitspolitiker im "Bundestag light"-Modus.
           </p>
+
           <h3>Politische Laufbahn</h3>
           <p>
-            <strong>2021 - 2025:</strong> Bundeskanzler der Bundesrepublik
-            Deutschland
-          </p>
-          <p><strong>2018 – 2021:</strong> Bundesminister der Finanzen</p>
-          <p><strong>2011 – 2018:</strong> Erster Bürgermeister von Hamburg</p>
-          <p>
-            <strong>2007 – 2009:</strong> Bundesminister für Arbeit und Soziales
+            <strong>Seit 05/2025:</strong> MdB (Einziger SPD-Direktkandidat im Osten, der überlebte).
           </p>
           <p>
-            <strong>2002 – 2011:</strong> Mitglied des Deutschen Bundestages;
-            2002 – 2004 Generalsekretär der SPD; 2005 – 2007 Parlamentarischer
-            Geschäftsführer der SPD-Bundestagsfraktion
+            <strong>2021 – 05/2025:</strong> Bundeskanzler (Kabinett Scholz).
           </p>
           <p>
-            <strong>2005 – 2011:</strong> Stellvertretender Vorsitzender der
-            SPD-Bundestagsfraktion
+            <strong>2018 – 2021:</strong> Bundesfinanzminister (Wirecard-Aufsicht).
           </p>
           <p>
-            <strong>Februar – April 2018:</strong> Kommissarischer
-            SPD-Parteivorsitzender
-          </p>
-          <p>
-            <strong>1982 – 1988:</strong> Stellvertretender Bundesvorsitzender
-            der Jusos
+            <strong>2011 – 2018:</strong> Erster Bürgermeister von Hamburg (G20-Desaster & Warburg-Bank).
           </p>
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Soziale Gerechtigkeit,
-            Wirtschaftspolitik, EU-Integration
+            <strong>Schwerpunkte:</strong> Vergesslichkeit (Cum-Ex), "Wumms" (Schulden machen) und das Aussitzen von Problemen bis zur nächsten Wahl.
           </p>
 
           <h3>FACTS</h3>
           <p>
-            Olaf Scholz blieb bei verschiedenen Skandalen wie Cum-Ex, Wirecard
-            und dem G20-Fiasko in Hamburg Verantwortung schuldig und zeigte
-            wiederholt Gedächtnislücken und mangelnde Bereitschaft, Fehler
-            einzugestehen. Trotz dieser Fehltritte konnte er sich stets aus der
-            Affäre ziehen und wurde Bundeskanzler.
+            <strong>Der Rekord-Absturz:</strong>
+            Olaf Scholz hat Geschichte geschrieben – im negativen Sinne. Unter seiner Führung stürzte die SPD bei der Wahl 2025 auf 16,4 % ab (schlechtestes Ergebnis der Nachkriegszeit). Trotzdem hielt er eisern an seiner Kanzlerkandidatur fest, selbst als beliebtere Kollegen wie Boris Pistorius gehandelt wurden.
           </p>
+
           <p>
-            Im April 2022 stimmte Scholz zudem für eine allgemeine
-            Corona-Impfpflicht.
+            <strong>Schmollen im Bundestag:</strong>
+            Nach dem Machtverlust zog sich Scholz in den Bundestag zurück – aber nicht, um zu arbeiten. Er verweigerte monatelang Reden und Ausschussarbeit, ein Verhalten, das als „Bundestag light“ verspottet wurde. Statt Politik zu machen, rezensiert er jetzt lieber Bücher in der ZEIT und plant eigene Publikationen über die Weltordnung. Der Steuerzahler finanziert also sein Autoren-Sabbatical.
+          </p>
+
+          <p>
+            <strong>Skandal-König:</strong>
+            Seine Liste der "Verfehlungen" ist länger als seine Amtszeit:
+            <ul>
+              <li><strong>Cum-Ex / Warburg Bank:</strong> Als Hamburger Bürgermeister traf er sich heimlich mit Bankiers, die Millionen an Steuergeldern ergaunert hatten. Danach „vergaß“ er die Inhalte der Gespräche.</li>
+              <li><strong>Wirecard:</strong> Als Finanzminister übersah er den größten Betrugsskandal der deutschen Wirtschaftsgeschichte.</li>
+              <li><strong>G20-Gipfel:</strong> Er garantierte Hamburg Sicherheit („Keine Sorge“), während die Stadt brannte.</li>
+            </ul>
+          </p>
+
+          <p>
+            <strong>Impfpflicht:</strong>
+            Im April 2022 stimmte Olaf Scholz im Bundestag <strong>für die allgemeine Corona-Impfpflicht</strong> und befürwortete damit staatlichen Zwang bei medizinischen Eingriffen.
           </p>
         </div>
 
