--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -83,17 +83,9 @@
             <strong>Schmollen im Bundestag:</strong>
             Nach dem Machtverlust zog sich Scholz in den Bundestag zurück – aber nicht, um zu arbeiten. Er verweigerte monatelang Reden und Ausschussarbeit, ein Verhalten, das als „Bundestag light“ verspottet wurde. Statt Politik zu machen, rezensiert er jetzt lieber Bücher in der ZEIT und plant eigene Publikationen über die Weltordnung. Der Steuerzahler finanziert also sein Autoren-Sabbatical.
           </p>
-
-          <p>
-            <strong>Skandal-König:</strong>
-            Seine Liste der "Verfehlungen" ist länger als seine Amtszeit:
-            <ul>
-              <li><strong>Cum-Ex / Warburg Bank:</strong> Als Hamburger Bürgermeister traf er sich heimlich mit Bankiers, die Millionen an Steuergeldern ergaunert hatten. Danach „vergaß“ er die Inhalte der Gespräche.</li>
-              <li><strong>Wirecard:</strong> Als Finanzminister übersah er den größten Betrugsskandal der deutschen Wirtschaftsgeschichte.</li>
-              <li><strong>G20-Gipfel:</strong> Er garantierte Hamburg Sicherheit („Keine Sorge“), während die Stadt brannte.</li>
-            </ul>
-          </p>
-
+            <p><strong>Cum-Ex / Warburg Bank:</strong> Als Hamburger Bürgermeister traf er sich heimlich mit Bankiers, die Millionen an Steuergeldern ergaunert hatten. Danach „vergaß“ er die Inhalte der Gespräche.</p>
+              <p><strong>Wirecard:</strong> Als Finanzminister übersah er den größten Betrugsskandal der deutschen Wirtschaftsgeschichte.</p>
+                <p><strong>G20-Gipfel:</strong> Er garantierte Hamburg Sicherheit („Keine Sorge“), während die Stadt brannte.</p>
           <p>
             <strong>Impfpflicht:</strong>
             Im April 2022 stimmte Olaf Scholz im Bundestag <strong>für die allgemeine Corona-Impfpflicht</strong> und befürwortete damit staatlichen Zwang bei medizinischen Eingriffen.
