--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -281,8 +281,7 @@
       <h2 class="party-section-title">Habeck-Highlights</h2>
 
       <p class="party-highlight-description">
-        Hier ein kleiner aber dennoch gut gelungener Zusammenschnitt von ein
-        paar wenigen interessanten Aussagen.
+        Hier ein kleiner Zusammenschnitt von einigen interessanten Aussagen.
       </p>
       <div class="video-container">
         <iframe
