--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <ul class="news-list">
             <li>
               <strong>Dezember 2025:</strong> So denkt Reichinnek (Linke) über die Ermordung von Charlie Kirk 
-              <a href="https://factico.eu/spd/linke/#empathie">Mehr lesen</a>
+              <a href="https://factico.eu//linke/reichinnek/#empathie">Mehr lesen</a>
             </li>
           <li>
             <strong>März 2025:</strong> Merz' Kehrtwende zur Schuldenbremse
