--- a/spd/esken/index.html
+++ b/spd/esken/index.html
@@ -70,7 +70,7 @@
           <h3>Politische Laufbahn</h3>
           <p>
             <strong>Seit 05/2025:</strong> Vorsitzende des Ausschusses für
-            Bildung und Familie (politisches Abstellgleis).
+            Bildung und Familie.
           </p>
           <p>
             <strong>2019 – 05/2025:</strong> Parteivorsitzende der SPD
@@ -82,7 +82,7 @@
           <p>
             <strong>Schwerpunkte:</strong> Kampf gegen die Polizei (unter dem
             Deckmantel der Rassismuskritik), Verharmlosung linker Gewalt
-            ("Antifa") und digitale Überwachung durchwinken, während man
+            (Antifa) und digitale Überwachung durchwinken, während man
             öffentlich dagegen wettert.
           </p>
 
@@ -101,11 +101,10 @@
             <strong>Verhältnis zur Polizei & Antifa:</strong>
             Esken pflegte ein fast schon feindseliges Verhältnis zur Exekutive.
             Sie unterstellte der deutschen Polizei pauschal
-            <strong>„latenten Rassismus“</strong> (sehr zur Freude der Beamten),
-            kritisierte Polizeieinsätze gegen Linksextreme in Leipzig-Connewitz
-            und twitterte stolz <strong>„Ich bin Antifa“</strong>. Dass sie
-            damit den gewaltbereiten schwarzen Block verharmloste, war ihr egal
-            – Kritik daran tat sie als rechts ab.
+            <strong>„latenten Rassismus“</strong>, kritisierte Polizeieinsätze
+            gegen Linksextreme in Leipzig-Connewitz und twitterte stolz
+            <strong>„Ich bin Antifa“</strong>. Kritik daran tat sie als rechts
+            ab.
           </p>
 
           <p>
@@ -122,7 +121,7 @@
             Öffentlich inszenierte sie sich als Gegnerin von Staatstrojanern und
             Überwachung. Als ihre Fraktion im Bundestag genau diesen
             Instrumenten zustimmte, unternahm sie als Parteichefin: Nichts.
-            Juso-Vertreter nannten das Verhalten „schäbig“, Esken nannte es wohl
+            Juso-Vertreter nannten das Verhalten „schäbig“, Esken nannte es
             Realpolitik.
           </p>
 
@@ -131,13 +130,13 @@
             Nachdem sie die SPD auf historische 16,4 % heruntergewirtschaftet
             hatte, zog sie sich im Mai 2025 vom Vorsitz zurück. In ihrem
             Wahlkreis Calw landete sie mit blamablen
-            <strong>12,89 %</strong> sogar hinter der AfD auf Platz 3. Ihr
-            Mandat behielt sie nur dank Listenplatz 1.
+            <strong>12,89 %</strong> hinter der AfD auf Platz 3. Ihr Mandat
+            behielt sie nur dank Listenplatz 1.
           </p>
 
           <p>
             <strong>Impfpflicht:</strong>
-            2022 stimmte siefür die allgemeine Corona-Impfpflicht und
+            2022 stimmte sie für die allgemeine Corona-Impfpflicht und
             befürwortete damit staatlichen Zwang bei medizinischen
             Entscheidungen.
           </p>
