--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -76,12 +76,12 @@
           <h3>FACTS</h3>
           <p>
             <strong>Der Rekord-Absturz:</strong>
-            Olaf Scholz hat Geschichte geschrieben – im negativen Sinne. Unter seiner Führung stürzte die SPD bei der Wahl 2025 auf 16,4 % ab (schlechtestes Ergebnis der Nachkriegszeit). Trotzdem hielt er eisern an seiner Kanzlerkandidatur fest, selbst als beliebtere Kollegen wie Boris Pistorius gehandelt wurden.
+            Olaf Scholz hat Geschichte geschrieben. Unter seiner Führung stürzte die SPD bei der Wahl 2025 auf 16,4% ab und erzielte damit das schlechteste Ergebnis der Nachkriegszeit. Trotzdem hielt er an seiner Kanzlerkandidatur fest, selbst als beliebtere Kollegen wie Boris Pistorius gehandelt wurden.
           </p>
 
           <p>
             <strong>Schmollen im Bundestag:</strong>
-            Nach dem Machtverlust zog sich Scholz in den Bundestag zurück – aber nicht, um zu arbeiten. Er verweigerte monatelang Reden und Ausschussarbeit, ein Verhalten, das als „Bundestag light“ verspottet wurde. Statt Politik zu machen, rezensiert er jetzt lieber Bücher in der ZEIT und plant eigene Publikationen über die Weltordnung. Der Steuerzahler finanziert also sein Autoren-Sabbatical.
+            Nach dem Machtverlust zog sich Scholz in den Bundestag zurück – aber nicht, um zu arbeiten. Er verweigerte monatelang Reden und Ausschussarbeit, ein Verhalten, das als „Bundestag light“ verspottet wurde. Statt Politik zu machen, rezensiert er jetzt lieber Bücher und plant eigene Publikationen über die Weltordnung. Der Steuerzahler finanzierte also sein Autoren-Sabbatical.
           </p>
             <p><strong>Cum-Ex / Warburg Bank:</strong> Als Hamburger Bürgermeister traf er sich heimlich mit Bankiers, die Millionen an Steuergeldern ergaunert hatten. Danach „vergaß“ er die Inhalte der Gespräche.</p>
               <p><strong>Wirecard:</strong> Als Finanzminister übersah er den größten Betrugsskandal der deutschen Wirtschaftsgeschichte.</p>
