--- a/spd/faeser/index.html
+++ b/spd/faeser/index.html
@@ -49,54 +49,87 @@
             (SPD)
           </p>
           <p>
-            <strong>Aktuelles Amt:</strong> Einfaches Mitglied des Deutschen Bundestages (seit 2025). Ehemalige Bundesministerin des Innern (2021–2025).
+            <strong>Aktuelles Amt:</strong> Mitglied des Deutschen Bundestages
+            (seit 2025). Ehemalige Bundesministerin des Innern (2021–2025).
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
-            <strong>Studium:</strong> Juristin. Als Rechtsanwältin sollte man eigentlich wissen, dass die Unschuldsvermutung gilt, bis das Gegenteil bewiesen ist. In ihrer Zeit als Ministerin schien sie dieses Prinzip – zumindest im Fall Schönbohm – kurzzeitig vergessen zu haben.
+            <strong>Studium:</strong> Juristin. Als Rechtsanwältin sollte man
+            eigentlich wissen, dass die Unschuldsvermutung gilt, bis das
+            Gegenteil bewiesen ist. In ihrer Zeit als Ministerin schien sie
+            dieses Prinzip – zumindest im Fall Schönbohm – kurzzeitig vergessen
+            zu haben.
           </p>
 
           <h3>Politische Laufbahn</h3>
           <p>
-            <strong>Seit 2025:</strong> Mitglied des Bundestages (über Landesliste gerettet).
+            <strong>Seit 2025:</strong> Mitglied des Bundestages (über
+            Landesliste gerettet).
           </p>
           <p>
-            <strong>2021 – 05/2025:</strong> Bundesministerin des Innern und für Heimat (Kabinett Scholz).
+            <strong>2021 – 05/2025:</strong> Bundesministerin des Innern und für
+            Heimat (Kabinett Scholz).
           </p>
           <p>
-            <strong>2023:</strong> Gescheiterte Spitzenkandidatin bei der Landtagswahl in Hessen.
+            <strong>2023:</strong> Gescheiterte Spitzenkandidatin bei der
+            Landtagswahl in Hessen.
           </p>
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> "Kampf gegen Rechts" (als einziges Thema), Symbolpolitik (Armbinden) und das Feuern von Beamten aufgrund von TV-Satire-Sendungen.
+            <strong>Schwerpunkte:</strong> "Kampf gegen Rechts" (als einziges
+            Thema), Symbolpolitik (Armbinden) und das Feuern von Beamten
+            aufgrund von TV-Satire-Sendungen.
           </p>
 
           <h3>FACTS</h3>
           <p>
             <strong>Der Abstieg:</strong>
-            Nancy Faesers Zeit als Innenministerin endete im Mai 2025. Bei der Bundestagswahl kassierte sie die Quittung der Wähler: In ihrem Wahlkreis Main-Taunus verlor sie das Direktmandat gegen die CDU. Dass sie heute überhaupt noch im Bundestag sitzt, verdankt sie nur dem sicheren Listenplatz 4 der hessischen SPD.
+            Nancy Faesers Zeit als Innenministerin endete im Mai 2025. Bei der
+            Bundestagswahl kassierte sie die Quittung der Wähler: In ihrem
+            Wahlkreis Main-Taunus verlor sie das Direktmandat gegen die CDU.
+            Dass sie heute überhaupt noch im Bundestag sitzt, verdankt sie nur
+            dem sicheren Listenplatz 4 der hessischen SPD.
           </p>
 
           <p>
             <strong>Die "Böhmermann-Affäre" (Schönbohm):</strong>
-            Ein Tiefpunkt rechtsstaatlichen Handelns: Faeser feuerte BSI-Präsident Arne Schönbohm, nachdem der Satiriker Jan Böhmermann im ZDF unbewiesene Vorwürfe über Russland-Kontakte verbreitet hatte. Später stellte sich heraus: Die Vorwürfe waren haltlos. Eine Entschuldigung? Fehlanzeige. Stattdessen machte sie das BSI abhängiger von der Politik.
+            Ein Tiefpunkt rechtsstaatlichen Handelns: Faeser feuerte
+            BSI-Präsident Arne Schönbohm, nachdem der Satiriker Jan Böhmermann
+            im ZDF unbewiesene Vorwürfe über Russland-Kontakte verbreitet hatte.
+            Später stellte sich heraus: Die Vorwürfe waren haltlos. Eine
+            Entschuldigung? Fehlanzeige. Stattdessen machte sie das BSI
+            abhängiger von der Politik.
           </p>
 
           <p>
             <strong>Das unprüfbare Abschiedsgeschenk:</strong>
-            Kurz vor ihrem Amtsende im Mai 2025 drückte sie noch schnell die Einstufung der AfD als „gesichert rechtsextrem“ durch. Der Clou: Auf ihre Anweisung hin wurde das entsprechende Gutachten nicht mehr fachlich geprüft, weil die Zeit nicht reichte. Hauptsache, das Ergebnis steht in der Zeitung – juristische Sorgfalt war zweitrangig. Selbst Wolfgang Kubicki nannte das Vorgehen fragwürdig.
+            Kurz vor ihrem Amtsende im Mai 2025 drückte sie noch schnell die
+            Einstufung der AfD als „gesichert rechtsextrem“ durch. Der Clou: Auf
+            ihre Anweisung hin wurde das entsprechende Gutachten nicht mehr
+            fachlich geprüft, weil die Zeit nicht reichte. Hauptsache, das
+            Ergebnis steht in der Zeitung – juristische Sorgfalt war
+            zweitrangig. Wolfgang Kubicki (FDP) nannte das Vorgehen fragwürdig.
           </p>
 
           <p>
             <strong>Die "One Love"-Farce:</strong>
-            Während sie innenpolitisch echte Probleme (Migration, Clan-Kriminalität) oft ignorierte, zeigte sie in Katar vollen Einsatz für Symbolfotos. Mit der „One Love“-Binde auf der Tribüne rettete sie zwar nicht die Menschenrechte, sicherte sich aber einen Platz in der Geschichte der peinlichsten PR-Aktionen, für die sie sogar von Rudi Völler Kritik erntete.
+            Während sie innenpolitisch echte Probleme (Migration,
+            Clan-Kriminalität) oft ignorierte, zeigte sie in Katar vollen
+            Einsatz für Symbolfotos. Mit der „One Love“-Binde auf der Tribüne
+            rettete sie zwar nicht die Menschenrechte, sicherte sich aber einen
+            Platz in der Geschichte der peinlichsten PR-Aktionen, für die sie
+            unter anderem von Rudi Völler Kritik erntete.
           </p>
-          
+
           <p>
-             <strong>Opportunismus pur:</strong>
-             Jahrelang warnte sie davor, Migration zu problematisieren. Doch kurz vor ihrer Landtagswahl in Hessen (nach den Silvester-Krawallen 2022/23) entdeckte sie plötzlich Probleme mit „bestimmten jungen Männern“. Genützt hat der kurze Ausflug in die Realität nichts: Die Wahl in Hessen verlor sie krachend.
+            <strong>Opportunismus pur:</strong>
+            Jahrelang warnte sie davor, Migration zu problematisieren. Kurz vor
+            ihrer Landtagswahl in Hessen (nach den Silvester-Krawallen 2022/23)
+            entdeckte sie dann aber plötzlich Probleme mit „bestimmten jungen
+            Männern“. Genützt hat der kurze Ausflug in die Realität nichts: Die
+            Wahl in Hessen verlor sie krachend.
           </p>
         </div>
 
