--- a/spd/klingbeil/index.html
+++ b/spd/klingbeil/index.html
@@ -46,60 +46,89 @@
             (SPD)
           </p>
           <p>
-            <strong>Aktuelles Amt:</strong> Vizekanzler und Bundesminister der Finanzen (im Kabinett Merz seit Mai 2025), SPD-Bundesvorsitzender.
+            <strong>Aktuelles Amt:</strong> Vizekanzler und Bundesminister der
+            Finanzen (im Kabinett Merz seit Mai 2025), SPD-Bundesvorsitzender
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
-            <strong>Studium:</strong> Politikwissenschaft, Soziologie und Geschichte (Magister). Also die perfekte theoretische Vorbereitung, um als Finanzminister die Wirtschaft einer der größten Industrienationen zu lenken.
+            <strong>Studium:</strong> Politikwissenschaft, Soziologie und
+            Geschichte (Magister). Also die perfekte theoretische Vorbereitung,
+            um als Finanzminister die Wirtschaft einer der größten
+            Industrienationen zu lenken.
           </p>
           <p>
-            <strong>Berufserfahrung:</strong> Null. Klingbeil ist der Prototyp des „Kreißsaal-Hörsaal-Plenarsaal“-Politikers. Er hat nie in der freien Wirtschaft Geld verdient, verwaltet nun aber als Finanzminister unser aller Steuergeld.
+            <strong>Berufserfahrung:</strong> Null. Klingbeil ist der Prototyp
+            des „Kreißsaal-Hörsaal-Plenarsaal“-Politikers. Er hat nie in der
+            freien Wirtschaft Geld verdient, verwaltet nun aber als
+            Finanzminister unser aller Steuergeld.
           </p>
 
           <h3>Politische Laufbahn</h3>
           <p>
-            <strong>Seit 05/2025:</strong> Vizekanzler und Finanzminister (Karriere-Sprung trotz Wahlniederlage).
+            <strong>Seit 05/2025:</strong> Vizekanzler und Finanzminister
+            (Karriere-Sprung trotz Wahlniederlage).
           </p>
           <p>
-            <strong>Seit 2021:</strong> SPD-Bundesvorsitzender (seit 2025 mit Bärbel Bas).
+            <strong>Seit 2021:</strong> SPD-Bundesvorsitzender (seit 2025 mit
+            <a href="../bas/">Bärbel Bas</a>).
           </p>
           <p>
-            <strong>02/2025 – 05/2025:</strong> Kurzzeitig Fraktionsvorsitzender (bis der Ministerposten winkte).
+            <strong>02/2025 – 05/2025:</strong> Kurzzeitig Fraktionsvorsitzender
+            (bis der Ministerposten winkte).
           </p>
-          <p>
-            <strong>Seit 2005/2009:</strong> Berufspolitiker im Bundestag.
-          </p>
+          <p><strong>Seit 2005/2009:</strong> Berufspolitiker im Bundestag.</p>
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Machterhalt. Früher "Antifa" und "Parlamentarische Linke", heute braver Vizekanzler unter Friedrich Merz. Flexibilität ist sein Markenkern.
+            <strong>Schwerpunkte:</strong> Früher "Antifa" und "Parlamentarische
+            Linke", heute Vizekanzler unter Friedrich Merz. Flexibilität ist
+            sein Markenkern.
           </p>
 
           <h3>FACTS</h3>
           <p>
             <strong>Der 64-Prozent-Mann:</strong>
-            Lars Klingbeil lieferte im Juni 2025 einen historischen Negativrekord ab. Bei seiner Wiederwahl zum Parteivorsitzenden erhielt er blamable <strong>64,9 %</strong> der Stimmen – das schlechteste Ergebnis aller Zeiten für einen Kandidaten ohne Gegenkandidaten. Selbst seine Co-Vorsitzende Bärbel Bas (95 %) ließ ihn alt aussehen. Die eigene Partei scheint ihn nicht zu lieben, nur zu ertragen.
+            Lars Klingbeil lieferte im Juni 2025 einen historischen
+            Negativrekord ab. Bei seiner Wiederwahl zum Parteivorsitzenden
+            erhielt er blamable <strong>64,9 %</strong> der Stimmen – das
+            schlechteste Ergebnis aller Zeiten für einen Kandidaten ohne
+            Gegenkandidaten. Selbst seine Co-Vorsitzende Bärbel Bas (95 %) ließ
+            ihn alt aussehen. Die eigene Partei scheint ihn nicht besonders zu
+            schätzen, nur zu ertragen.
           </p>
 
           <p>
             <strong>Belohnung für das Scheitern:</strong>
-            Unter seiner Führung stürzte die SPD bei der Bundestagswahl 2025 auf historische 16,4 % ab. Die Konsequenz? Kein Rücktritt, sondern eine Beförderung zum <strong>Vizekanzler und Finanzminister</strong>. Klingbeil bewies damit eindrucksvoll, dass in der Berliner Blase Leistung und Karriere nichts miteinander zu tun haben müssen.
+            Unter seiner Führung stürzte die SPD bei der Bundestagswahl 2025 auf
+            historische 16,4% ab. Die Konsequenz? Kein Rücktritt, sondern eine
+            Beförderung zum <strong>Vizekanzler und Finanzminister</strong>.
+            Klingbeil bewies damit, dass in der Berliner Blase Leistung und
+            Karriere nichts miteinander zu tun haben müssen.
           </p>
 
           <p>
             <strong>Vergangenheit:</strong>
-            In seiner Jugend engagierte er sich in der <strong>Antifa-Bewegung</strong>. Vom kapitalismuskritischen Straßenkämpfer zum obersten Kassenwart des Staates – eine Wandlung, die wohl nur die SPD hinbekommt.
+            In seiner Jugend engagierte er sich in der
+            <strong>Antifa-Bewegung</strong>. Vom kapitalismuskritischen
+            Straßenkämpfer zum obersten Kassenwart des Staates – eine Wandlung,
+            die wohl nur die SPD hinbekommt.
           </p>
-          
+
           <p>
-             <strong>Sexismus-Joker:</strong>
-             Unvergessen auch sein peinlicher Auftritt bei Maischberger Ende 2025, wo er Kritik an Bärbel Bas als Frauenfeindlichkeit abtat („Die Frau wird ausgelacht“), nur um ihr im selben Atemzug gönnerhaft zu attestieren: „Sie haut mal einen raus.“
+            <strong>Sexismus-Joker:</strong>
+            Unvergessen auch sein peinlicher Auftritt bei Maischberger Ende
+            2025, wo er Kritik an <a href="../bas/">Bärbel Bas</a> als
+            Frauenfeindlichkeit abtat („Die Frau wird ausgelacht“), nur um ihr
+            im selben Atemzug gönnerhaft zu attestieren: „Sie haut mal einen
+            raus.“
           </p>
 
           <p>
             <strong>Impfpflicht:</strong>
-            Im April 2022 stimmte Lars Klingbeil im Bundestag <strong>für die allgemeine Corona-Impfpflicht</strong> und damit für einen massiven Eingriff in die Grundrechte der Bürger.
+            Im April 2022 stimmte Lars Klingbeil im Bundestag
+            <strong>für die allgemeine Corona-Impfpflicht</strong> und damit für
+            einen massiven Eingriff in die Grundrechte der Bürger.
           </p>
         </div>
 
