--- a/gruene/baerbock/index.html
+++ b/gruene/baerbock/index.html
@@ -69,7 +69,7 @@
           <h3>Politische Laufbahn</h3>
           <p>
             <strong>Seit 09/2025:</strong> Präsidentin der UN-Generalversammlung
-            in New York (Karriere-Sprung nach oben).
+            in New York.
           </p>
           <p>
             <strong>2021 – 05/2025:</strong> Bundesministerin des Auswärtigen
@@ -82,9 +82,8 @@
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Feministische Außenpolitik (Moral
-            über Diplomatie), Klimaschutz und Waffenlieferungen
-            ("Kriegsmüdigkeit gibt es nicht").
+            <strong>Schwerpunkte:</strong> Feministische Außenpolitik,
+            Klimaschutz und Waffenlieferungen ("Kriegsmüdigkeit gibt es nicht").
           </p>
 
           <h3>FACTS</h3>
@@ -177,8 +176,8 @@
           <div class="smallvideo-container">
             <div class="video-wrapper">
               <iframe
-                src="https://www.youtube.com/embed/TJCj3U33KPI?si=yGtVr3X_q-sypWOT"
-                title="Annalena Baerbock: We are fighting a war against Russia."
+                src="https://www.youtube.com/embed/8lU7OIr0XII?si=gVoDvNPGvq056dAQ"
+                title="Ungeschnittener O-Ton - Die Kriegserklärung von Baerbock"
                 frameborder="0"
                 allowfullscreen
               ></iframe>
